frontend/test/should_fail/different_number_of_rewrite_parts_nested_alternative.grg
pattern p {
	alternative {
		foo {
			alternative {
				bar {
					modify {
					}
				}
			}
		}
	}
}
